<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="com.bncc.habith.ui.state.DataStatus.Status" />

        <import type="android.view.View" />

        <import type="com.bncc.habith.ui.state.DataStatus.Status" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.updatepassword.UpdatePasswordActivity">

        <include
            android:id="@+id/loading"
            layout="@layout/layout_loading"
            android:visibility="@{viewState == Status.LOADING ? View.VISIBLE : View.GONE}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_old"
            style="@style/AuthInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/old_password_label"
            app:placeholderText="@string/username_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new"
            style="@style/AuthInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password_label"
            app:placeholderText="@string/username_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_re"
            style="@style/AuthInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:hint="@string/re_password_label"
            app:placeholderText="@string/username_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            style="@style/PrimaryButton.Rounded.Padded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_update_detail_password" />

    </LinearLayout>
</layout>