<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!-- Bottom sheet contents. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_repeatType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeats_every"
            android:textSize="18sp"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:id="@+id/layout_repeatTypeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_repeatType">

            <LinearLayout
                android:id="@+id/layout_repeatType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layout_repeatDayNum"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/repeat_day_num"
                    android:layout_marginStart="137dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_repeatDayNum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="137dp"
                    android:text="@string/days"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_repeatType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="visible">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btn_day6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="16dp"
                    android:background="@drawable/day_button_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_repeatTimeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_on"
            android:textSize="18sp"
            android:fontFamily="@font/lato_bold"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_repeatTypeContent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_repeatTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:icon="@drawable/add_reminder_ic_24"
            android:text="@string/add_time"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_repeatTimeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submitReminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            style="@style/PrimaryButton"
            android:text="@string/set_reminder"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/btn_repeatTime"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>